fixed heading type so spacing is applied

--- a/packages/ilios-common/app/styles/ilios-common/components/learnergroup-selection-cohort-manager.scss
+++ b/packages/ilios-common/app/styles/ilios-common/components/learnergroup-selection-cohort-manager.scss
@@ -3,8 +3,7 @@
 .learnergroup-selection-cohort-manager {
   border: 1px solid var(--light-blue);
 
-  h5 {
-    margin-bottom: 0.5rem;
+  h4 {
     padding: 0.5rem;
   }
 
